--- a/dadebay.html
+++ b/dadebay.html
@@ -2,7 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Scott-Base Ebay</title>
-<link href="http://ecadmin.sun.seedhost.eu/ebay/ebay.css" rel="stylesheet">
+<link href="https://earthcoder.github.io/ebay.css" rel="stylesheet">
 <!-- Title // -->
 <section class="wrapper has-m-4 sm-m-12">
 <section class="wrapper-inner">
